kubernetes/core/lldap/config/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.bhamm-lab.com`)
      kind: Rule
      services:
        - name: lldap-service
          port: 17170
  # tls:
  #   secretName: bhamm-lab-tls
